<resources>
    <string name="app_name">FHIRQUESTINAIRE</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/MM/yyyy)</string>
    <string name="adverse_effect">Adverse Effect?</string>
    <string name="submit">Submit</string>
</resources>